# wa1kpcap

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  README_CN.md  benchmark.py  benchmark_construction.py  benchmark_dispatch.py  benchmark_pyobj.py  benchmark_report.md  benchmark_report_new_old.md  benchmark_report_old.md  benchmark_report_speed.md  benchmark_slots.py  context.md  dict_based.md  findings.md  gen_tls_report.py  plan_context.md  profile_breakdown.py  profile_cpp_detail.py  profile_cpp_real.py  profile_native.py  profile_wa1kpcap.py  progress.md  pyproject.toml  pytest.ini  refactored-squishing-hennessy.md  run_tests.py  task_plan.md  tls_report.md
.github/workflows/: publish.yml  tests.yml
docs/: API_EXTRACT_CN.md  README.md  README_CN.md  add-builtin-protocol-guide.md  add-custom-protocol-guide.md  native_engine_design.md  protocol-overview.md  yaml-primitives-reference.md
docs/plans/: 2025-01-20-protocol-expansion-design.md  2025-01-20-protocol-expansion-implementation.md  add_proto_plan.md
examples/: README.md  basic_usage.py  custom_feature.py  demo_01_analyzer_basic.py  demo_02_analyzer_features.py  demo_05_native_batch_extract.py  demo_06_native_protocols.py  demo_07_pcap_split.py  demo_08_unified_sequences.py  export_data.py  feature_extraction.py
skills/add-custom-protocol/: SKILL.md
skills/add-custom-protocol/examples/: complete-example.md
skills/add-yaml-protocol/: SKILL.md
skills/add-yaml-protocol/examples/: syslog.yaml
src/cpp/: CMakeLists.txt  bindings.cpp  bpf_filter.cpp  bpf_filter.h  expression_eval.cpp  expression_eval.h  field_value.h  flow_buffer.cpp  flow_buffer.h  flow_manager.cpp  flow_manager.h  hardcoded_parsers.cpp  hardcoded_parsers.h  parsed_packet.h  pcap_reader.cpp  pcap_reader.h  protocol_engine.cpp  protocol_engine.h  protocol_registry.h  quic_crypto.cpp  quic_crypto.h  stats_core.h  util.h  yaml_loader.cpp  yaml_loader.h
src/cpp/nvers/: CMakeLists.txt  argus_flow.h  bindings.cpp  cic_extractor.cpp  cic_flow.h  cicext_extractor.cpp  cicext_flow.h  dhcp_extractor.cpp  dhcp_flow.h  dns_extractor.cpp  dns_flow.h  flow_extractor.cpp  flow_limit.h  ftp_extractor.cpp  ftp_flow.h  http_flow.h  im_detect.cpp  im_detect.h  im_extractor.cpp  json_log.h  l7_extractors.cpp  mqtt_flow.h  netflow_flow.h  nvers_api.cpp  nvers_api.h  payload_extractor.cpp  payload_flow.h  pcap_split.cpp  protocol_common.h  protocol_json_emit.h  quic_flow.h  rdp_flow.h  seq_extractor.cpp  seq_flow.h  sip_flow.h  smtp_extractor.cpp  smtp_flow.h  ssh_flow.h  tls_extractor.cpp  tls_flow.h  (+5 more)
test/: dup.pcap  fin-rst.pcap  ip_seg.pcap  multi.pcap  quic.pcap  quic2.pcap  single.pcap
tests/: conftest.py  test_analyzer.py  test_arp_icmp.py  test_coverage_additional.py  test_custom_protocol.py  test_exporters.py  test_exporters_coverage.py  test_ext_protocol.py  test_features.py  test_filter.py  test_flow.py  test_flow_key.py  test_flow_manager_native.py  test_link_layer_protocols.py  test_native_engine.py  test_packet.py  test_phase0_gaps.py  test_process_file.py  test_protocol_parsing.py  test_protocols.py  test_quic.py  test_reader.py  test_tls_integration.py
wa1kpcap/: __init__.py  exporters.py
wa1kpcap/core/: __init__.py  analyzer.py  filter.py  flow.py  packet.py  reader.py
wa1kpcap/extract/: __init__.py  unified_seq.py
wa1kpcap/features/: __init__.py  extractor.py  registry.py
wa1kpcap/native/: __init__.py  converter.py  engine.py
wa1kpcap/native/protocols/: bsd_loopback.yaml  dhcp.yaml  dhcpv6.yaml  dns.yaml  ethernet.yaml  gre.yaml  ipv4.yaml  ipv6.yaml  link_types.yaml  linux_sll.yaml  linux_sll2.yaml  mpls.yaml  nflog.yaml  raw_ip.yaml  tcp.yaml  tls_certificate.yaml  tls_client_hello.yaml  tls_ext_alpn.yaml  tls_ext_signature_algorithms.yaml  tls_ext_sni.yaml  tls_ext_supported_groups.yaml  tls_handshake.yaml  tls_record.yaml  tls_server_hello.yaml  tls_stream.yaml  udp.yaml  vlan.yaml  vxlan.yaml
wa1kpcap/protocols/: __init__.py  application.py  base.py  link.py  network.py  registry.py  transport.py
wa1kpcap/reassembly/: __init__.py  ip_fragment.py  tcp_stream.py  tls_record.py
